<resources>
    <string name="app_name">Scrolling Text</string>
    <string name="article_title">A Long Time Coming</string>
    <string name="article_Subtitle">The conclusion of the beginning</string>
    <string name="article_text"> \t\t I haven’t slept well in a while. Sometimes I go to bed at 9 pm, wake up at midnight and never go back to sleep. Some nights I don’t sleep at all. Tonight is #nosleep.

\n\n\t\t Currently I’m watching reruns of Family Matters on Nick at Night as my head rests comfortably on my too expensive Casper pillow, my mother basically forced me to get it. Seriously, she grabbed my credit card and purchased it for me online. She said, and I quote, “a good night sleep begins and ends with a cloud-like pillow.” Not unless you have night-terries mom!

\n\n\t\t Just as Steve Urkle spits out \“Did I do that?\” for like the 20th time, my phone rings.

\n\n\t\t Who the fuck is calling\? And at this time? What time is it anyway\? I grab my phone and read 02:07 as I answer it without even looking at the caller ID.

\n\n\t\t \“Hello\?” The person on the other line says.
\n\n\t\t \“W-who is this?\” He sounds familiar, but\—
\n\n\t\t \“Mrs. Smith\?”
\n\n\t\t Oh, this is - \“Detective Robertson…how are you? Why are you calling so late?\”
\n\n\t\t \“We\," he lets out a large sigh\, \"we believe we found him ma\’am?”
\n\n\t\t \“W-who?” Like I actually needed to ask that question.  There is only one person that he could be talking about.
\n\n\t\t \“Your husband. We would like for you to come in and identify his body.\”
\n\n\t\t \“So, you found him\?"
\n\n\t\t \“We believe so.\”
\n\n\t\t \“Okay…o-okay.\” I sit myself up on my bed and rub my eyes.
\n\n\t\t \“Will you be able to come in now\,” he asks.
\n\n\t\t \“Uh…yeah…give me 20 minutes, I\’ll be there.\”
\n\n\t\t \“Yes, ma’am. See you in 20.\”
\n\n\t\t \“Robertson…are you sure it is him? I mean, he has been presumed dead for 3 years…wouldn\’t his body have decomposed already\?”
\n\n\t\t \“He wasn\’t buried ma’am…come down to the station and I’ll explain everything.\”
\n\n\t\t \“So\, he was murdered?\”
\n\n\t\t \“Yes.\”
\n\n\t\t \“And is it really him?\”
\n\n\t\t \“You’ll need to confirm that, but we believe so, yes.\”
\n\n\t\t I sigh before responding with \“Okay…okay, I\-I\’ll see you in 20.\”
\n\n\t\t \“Great.\” He hangs up.

\n\n\t\t But I don’t put the phone down. To my left I still see him…smell him laying right next to me. I touch his side of the bed, remembering the gun shot scar on his right shoulder; his elbow that he always forgot to moisturize; his chubby belly that he hated but it served its purpose as a head rest.

\n\n\t\t For the first time since his memorial I allow myself to cry.

\n\n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t—

\n\n\t\t \“Alright, Mrs. Smith\—\”
\n\n\t\t \“Please\,\” I say to Robertson, “call me Shanice.\”
\n\n\t\t \“Okay, Shanice, are you ready?\”
\n\n\t\t \"I\—\” I stare at the sheet covering his body…do I want to know if it is him? Should I just leave and let my mind wonder for the rest of my life if the father to my still born child is underneath those sheets?
        \n\n\t\t <i>You know that isn’t healthy</i>, my therapist would say. <i>Think of how you far back you will set yourself by doing such. Remember depression is the bitch friend you desperately want to get rid of.</i>
\n\n\t\t \“So, stop digging a bigger hole\,\” I say, unconsciously.
\n\n\t\t \“Excuse me\?\” Robertson says.
\n\n\t\t \“Sorry...umm\,let\'s get this over with. Uncover the body.\"
\n\n\t\t To read the rest of the story go to \(TestLink for the purpose of this assignment\)\:https://www.google.com/
</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="write_comment">Write Comment</string>
    <string name="submit">Submit</string>
    <string name="comment_section">COMMENTS</string>
</resources>